Bug 89070 - Fix format signedness warnings
Summary: Fix format signedness warnings
Status: RESOLVED FIXED
Alias: None
Product: udisks
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Martin Pitt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-10 22:52 UTC by David King
Modified: 2015-02-11 06:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
proposed patch (30.20 KB, patch)
2015-02-10 22:53 UTC, David King
Details | Splinter Review

Description David King 2015-02-10 22:52:14 UTC
GCC 5.0, with its new -Wformat-signedness, warns about the sign being different between a type and the format string in printf-format messages, and udisks enables -Wformat=2 as part of its default warnings (which eventually causes the build to fail).
Comment 1 David King 2015-02-10 22:53:38 UTC
Created attachment 113331 [details] [review]
proposed patch

This fixes the build for me. Sometimes it was sufficient to change the format string, but sometimes a cast was necessary.
Comment 2 Martin Pitt 2015-02-11 06:20:40 UTC
Very nice, thank you! Applied.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.